--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@types/pg": "^8.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -17,6 +19,7 @@
     "googleapis": "^129.0.0",
     "lucide-react": "^0.471.0",
     "next": "14.2.22",
+    "next-themes": "^0.4.4",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
